--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.4      Wed 16 Jan 09:37:38 GMT 2019
+    * Spring Clean and up to CPAN
 v0.0.3		Wed Mar 8 20:58:12 2017 +0000 
 	* Fix for non-flattening in sub-signature
 v0.0.2		Tue Jan 24 21:12:04 2017 +0000 
