--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.0.5      Wed 16 Jan 12:43:24 GMT 2019
+    * Add missing LICENCE file
 v0.0.4      Wed 16 Jan 09:37:38 GMT 2019
     * Spring Clean and up to CPAN
 v0.0.3		Wed Mar 8 20:58:12 2017 +0000 
