--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.1.1		Tue 19 Jan 07:25:06 GMT 2021
+	* Some light renaming
 v0.1.0		Mon 18 Jan 22:06:26 GMT 2021
 	* Switch to Distribution::Builder::MakeFromJSON
 v0.0.5      Wed 16 Jan 12:43:24 GMT 2019
