--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.1.2	Sun  7 Aug 09:44:53 BST 2022
+	* Upload to zef repository
 v0.1.1		Tue 19 Jan 07:25:06 GMT 2021
 	* Some light renaming
 v0.1.0		Mon 18 Jan 22:06:26 GMT 2021
@@ -12,3 +14,4 @@ v0.0.2		Tue Jan 24 21:12:04 2017 +0000
 	* Make zef compatible
 v0.0.1		Sat Aug 6 11:52:53 2016 +0100 
 	* Initial release
+
