--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+v0.1.3	Mon  8 Aug 13:57:17 BST 2022
+	* Fix build
 v0.1.2	Sun  7 Aug 09:44:53 BST 2022
 	* Upload to zef repository
 v0.1.1		Tue 19 Jan 07:25:06 GMT 2021
